# Protocolo_Titan

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Análisis de Ingeniería de Comunicaciones Tácticas.docx  Una red táctica basada en el estándar GSM.docx  guia_uso_docente.md
notebooks/: protocolo_titan_replanteado.ipynb
outputs/: certificacion_rbw.csv  certificacion_red_checklist.csv  escenario_a_fading_metricas.csv  escenario_a_movilidad.csv  escenario_b_canales_logicos.csv  escenario_b_planificacion.csv  gsm_fdma_tdma_resumen.csv  informe_resultados.md  traza_rayleigh_250_kmh.csv  traza_rayleigh_50_kmh.csv  traza_rician_250_kmh.csv  traza_rician_50_kmh.csv
src/protocolo_titan/: __init__.py  cellular_planning.py  config.py  instrumentation.py  main.py  plots.py  propagation.py  radio_access.py  report.py  scenario_a.py  scenario_b.py  streamlit_app.py  ui_charts.py
tests/: test_core.py
