[project]
name = "protocolo-titan"
version = "0.2.0"
description = "Código docente para el reto Protocolo Titán: GSM/EDGE, movilidad, fading, planificación celular e instrumentación RED."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "streamlit>=1.30"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
